<resources>
    <string name="app_name">Soundboard</string>
    <string name="unnamed_sample">Unnamed Sample</string>
    <string name="play_button">Play Button</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_customization">Customization</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Ok</string>
    <string name="pref_description_text_size">Set the text size for sample names on the main screen.</string>
    <string name="pref_title_text_size">Text Size</string>
    <string name="pref_description_nothing_here">There is nothing here.</string>
    <string name="pref_title_nothing_here">Whoops!</string>
    <string name="path_input_hint">Sample Name</string>
    <string name="select_an_audio_file">Select an audio file</string>
    <string name="file_does_not_exist">File does not exist!</string>
    <string name="no_selection_made">No selection was made!</string>
    <string name="delete_sample">Delete Sample</string>
    <string name="pref_title_play_immediately">Play Immediately</string>
    <string name="pref_description_play_immediately">Starts a sample immediately while another is still playing.</string>
    <string name="pref_title_stop_on_play_other">Stop currently playing sound</string>
    <string name="pref_description_stop_on_play_other">Stops the currently playing sample when the user tries to play another one.</string>
    <string name="settings">Settings</string>
    <string name="pref_title_num_cols">Number of columns</string>
    <string name="pref_description_num_cols">Set the number of columns on the main screen.</string>
    <string name="edit_sample">Edit</string>
    <string name="sample_does_not_exist">Sample doesn\'t exist!</string>
    <string name="invalid_sample_name">Invalid name!</string>
    <string name="find_sounds">Find Sounds</string>
    <string name="diag_title_find_sounds">@string/find_sounds</string>
    <string name="diag_message_find_sounds">You can find all the sounds you need online.\n\nJust enter something like \'soundboard sounds wav free download\' into a search engine of your choice.\n\nAfter downloading the file, you can use the add button to add a sample.</string>
    <string name="invalid_num_cols_value">Value has to be between 0 and 8!</string>
    <string name="reset">Reset</string>

    <string-array name="pref_text_size_titles">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array translatable="false" name="pref_text_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
